src/test/deca/context/valid/created/deux-classes.deca
//Description :
// Test de deux classes
//
// Resultats :
// 


class Premiere {

}

class Deuxieme {

}

{

}
