src/test/deca/context/invalid/created/double-class.deca
//Description :
// Test de déclaration de deux classes ayant le même nom
//
// Resultats :
// Erreur


class Premiere {

}

class Premiere {

}

{}
